bin_PROGRAMS = unnamedblocks
AM_CPPFLAGS = -Isrc
unnamedblocks_SOURCES = src/main.cpp src/handlers/runtime/RuntimeHandler.cpp src/handlers/runtime/VariableHandler.cpp src/handlers/runtime/ByteHandler.cpp src/handlers/runtime/ThreadHandler.cpp src/handlers/runtime/ObjectHandler.cpp src/handlers/Logger.cpp src/handlers/ProjectHandler.cpp src/handlers/MessageHandler.cpp src/stacking/Block.cpp src/stacking/args/Argument.cpp src/stacking/Plane.cpp src/stacking/Stack.cpp src/registries/BlockRegistry.cpp src/Global.cpp src/ui/Button.cpp src/ui/TypingSystem.cpp
unnamedblocks_LDADD = pthread sfml-system sfml-network sfml-window sfml-graphics sfml-audio
