bin_PROGRAMS = unnamedblocks
AM_CPPFLAGS = -Isrc -ggdb -Wall -D LINUX
unnamedblocks_SOURCES = ./src/Global.cpp ./src/ui/TypingSystem.cpp ./src/ui/Button.cpp ./src/handlers/MessageHandler.cpp ./src/handlers/Logger.cpp ./src/handlers/ProjectHandler.cpp ./src/handlers/runtime/VariableHandler.cpp ./src/handlers/runtime/ObjectHandler.cpp ./src/handlers/runtime/ByteHandler.cpp ./src/handlers/runtime/ThreadHandler.cpp ./src/handlers/runtime/RuntimeHandler.cpp ./src/registries/ShaderRegistry.cpp ./src/registries/BlockRegistry.cpp ./src/stacking/args/Argument.cpp ./src/stacking/Block.cpp ./src/stacking/Plane.cpp ./src/stacking/Stack.cpp ./src/main.cpp 
unnamedblocks_LDADD = -lpthread -lsfml-system -lsfml-network -lsfml-window -lsfml-graphics -lsfml-audio -lX11 -lGL
